@@ -5,11 +5,10 @@ Tâches libres :
 	- Il faudrait vérifier ou Windows Privacity Tool (dernière version) 
 	  installe Gpg, et si celui-ci est utilisable !
 	- Si oui, implémenter cgpgwin
+	- De temps en temps, un menu s'ouvre alors qu'il ne devrais pas !
 	
 Tâches de Maximilien :
 	- Fonctions pour ajouter le support GPG dans le webmail de GMail
-	- Il faut absolument être compatible avec Gmail avec le système 
-	  de la touche droite
 
 Tâches d'Achraf :
 	- option pour choisir le chemin de gpg
